manifests/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-service
  labels:
    app: httpbin
spec:
  selector:
    app: httpbin
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
