manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    name: httpbin-ingress
    app: httpbin
spec:
  rules:
  - host: minikube.project.httpbin
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: httpbin-service
            port: 
              number: 80
